@@ -4,5 +4,5 @@ layer at (0,0) size 800x600
   RenderBlock {HTML} at (0,0) size 800x600
     RenderBody {BODY} at (8,8) size 784x584
       RenderBlock {DIV} at (0,0) size 784x95
-        RenderText {#text} at (0,0) size 72x95
-          text run at (0,0) width 72: "\x{2665}"
+        RenderText {#text} at (0,0) size 73x95
+          text run at (0,0) width 73: "\x{2665}"
